# alphabet-squared

./: Cargo.toml  README.md
python/: pyproject.toml
python/alphabet_squared/: __main__.py  stuff.py
src/: main.rs
