[package]
name = "alphabet-squared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencascade = { git = "https://github.com/bschwind/opencascade-rs", rev = "6fe6eed791752c6daa5c571a7038e7e8964a2458" }
anyhow = "1.0.95"
clap = { version = "4.5.24", features = ["derive"] }
glam = "0.24.2"
ttf-parser = "0.25.1"
